--- a/chaps.bib
+++ b/chaps.bib
@@ -1,7 +1,17 @@
+@incollection{Urcelay_2022,
+	doi = {10.1016/b978-0-12-809324-5.23952-7},
+	url = {https://doi.org/10.1016%2Fb978-0-12-809324-5.23952-7},
+	year = 2021,
+	publisher = {Elsevier},
+	pages = {109--117},
+	author = {Gonzalo P. Urcelay and Michael P. Domjan},
+	title = {Pavlovian Conditioning},
+	booktitle = {Encyclopedia of Behavioral Neuroscience, 2nd edition}
+}
 @InCollection{1,
-  title = {Visual Guidance of Natural Behavior},
-  author = {Mary Hayhoe},
-  booktitle = {Oxford Research Encyclopedia of Psychology},
+  title = {Pavlovian conditioning, survival, and reproductive success. },
+  author = {Michael Domjan},
+  booktitle = {Evolution of learning and memory mechanisms,},
   year = {2022},
   publisher = {.},
 }
