--- a/pubs.bib
+++ b/pubs.bib
@@ -1,127 +1,27 @@
-@article{1Ashmaig_2022,
-	doi = {10.1167/jov.22.14.4416},
-	url = {https://doi.org/10.1167%2Fjov.22.14.4416},
+@article{1Monfils_2022,
+	doi = {10.1042/etls20220001},
+	url = {https://doi.org/10.1042%2Fetls20220001},
 	year = 2022,
-	month = {dec},
-	publisher = {Association for Research in Vision and Ophthalmology ({ARVO})},
-	volume = {22},
-	number = {14},
-	pages = {4416},
-	author = {Omer Ashmaig and Karl Muller and Mary Hayhoe},
-	title = {Does working memory decay constrain gaze location while walking and bicycling?},
-	journal = {Journal of Vision}
-}
-@article{2Panfili_2022,
-	doi = {10.1167/jov.22.14.4040},
-	url = {https://doi.org/10.1167%2Fjov.22.14.4040},
-	year = 2022,
-	month = {dec},
-	publisher = {Association for Research in Vision and Ophthalmology ({ARVO})},
-	volume = {22},
-	number = {14},
-	pages = {4040},
-	author = {Daniel Panfili and Karl Muller and Mary Hayhoe},
-	title = {Flow segmentation during locomotion},
-	journal = {Journal of Vision}
-}
-@article{3Rubin_2022,
-	doi = {10.1080/16506073.2022.2053882},
-	url = {https://doi.org/10.1080%2F16506073.2022.2053882},
-	year = 2022,
-	month = {apr},
-	publisher = {Informa {UK} Limited},
-	volume = {51},
+	month = {sep},
+	publisher = {Portland Press Ltd.},
+	volume = {6},
 	number = {5},
-	pages = {371--387},
-	author = {Mikael Rubin and Karl Muller and Mary M. Hayhoe and Michael J. Telch},
-	title = {Attention guidance augmentation of virtual reality exposure therapy for social anxiety disorder: a pilot randomized controlled trial},
-	journal = {Cognitive Behaviour Therapy}
+	pages = {445--455},
+	author = {Marie-H. Monfils and Michael Domjan},
+	editor = {Amy L Milton},
+	title = {The elegant complexity of fear in non-human animals},
+	journal = {Emerging Topics in Life Sciences}
 }
-@article{4Matthis_2022,
-	doi = {10.1371/journal.pcbi.1009575},
-	url = {https://doi.org/10.1371%2Fjournal.pcbi.1009575},
-	year = 2022,
-	month = {feb},
-	publisher = {Public Library of Science ({PLoS})},
-	volume = {18},
-	number = {2},
-	pages = {e1009575},
-	author = {Jonathan Samir Matthis and Karl S. Muller and Kathryn L. Bonnen and Mary M. Hayhoe},
-	editor = {Daniel S Marigold},
-	title = {Retinal optic flow during natural locomotion},
-	journal = {{PLOS} Computational Biology}
-}
-@article{5Rubin_2022,
-	doi = {10.3758/s13414-021-02430-x},
-	url = {https://doi.org/10.3758%2Fs13414-021-02430-x},
-	year = 2022,
+@article{2K_ksal_2021,
+	doi = {10.1007/s10508-020-01906-5},
+	url = {https://doi.org/10.1007%2Fs10508-020-01906-5},
+	year = 2021,
 	month = {jan},
 	publisher = {Springer Science and Business Media {LLC}},
-	volume = {84},
-	number = {2},
-	pages = {396--407},
-	author = {Mikael Rubin and Sihang Guo and Karl Muller and Ruohan Zhang and Michael J. Telch and Mary M. Hayhoe},
-	title = {Selective visual attention during public speaking in an immersive context},
-	journal = {Attention, Perception, {\&} Psychophysics}
-}
-@article{6Bonnen_2021,
-	doi = {10.1038/s41598-021-99846-0},
-	url = {https://doi.org/10.1038%2Fs41598-021-99846-0},
-	year = 2021,
-	month = {oct},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {11},
-	number = {1},
-	author = {Kathryn Bonnen and Jonathan S. Matthis and Agostino Gibaldi and Martin S. Banks and Dennis M. Levi and Mary Hayhoe},
-	title = {Binocular vision and the control of foot placement during walking in natural terrain},
-	journal = {Scientific Reports}
-}
-@article{7Rubin_2020,
-	doi = {10.1016/j.brat.2020.103706},
-	url = {https://doi.org/10.1016%2Fj.brat.2020.103706},
-	year = 2020,
-	month = {nov},
-	publisher = {Elsevier {BV}},
-	volume = {134},
-	pages = {103706},
-	author = {Mikael Rubin and Sean Minns and Karl Muller and Matthew H. Tong and Mary M. Hayhoe and Michael J. Telch},
-	title = {Avoidance of social threat: Evidence from eye movements during a public speaking challenge using 360{\textdegree}- video},
-	journal = {Behaviour Research and Therapy}
-}
-@inproceedings{Zhang_2020,
-	doi = {10.24963/ijcai.2020/689},
-	url = {https://doi.org/10.24963%2Fijcai.2020%2F689},
-	year = 2020,
-	month = {jul},
-	publisher = {International Joint Conferences on Artificial Intelligence Organization},
-	author = {Ruohan Zhang and Akanksha Saran and Bo Liu and Yifeng Zhu and Sihang Guo and Scott Niekum and Dana Ballard and Mary Hayhoe},
-	title = {Human Gaze Assisted Artificial Intelligence: A Review},
-	booktitle = {Proceedings of the Twenty-Ninth International Joint Conference on Artificial Intelligence},
-	journal = {IJCAI : proceedings of the conference}
-}
-@article{9Zhang_2020,
-	doi = {10.1609/aaai.v34i04.6161},
-	url = {https://doi.org/10.1609%2Faaai.v34i04.6161},
-	year = 2020,
-	month = {apr},
-	publisher = {Association for the Advancement of Artificial Intelligence ({AAAI})},
-	volume = {34},
-	number = {04},
-	pages = {6811--6820},
-	author = {Ruohan Zhang and Calen Walshe and Zhuode Liu and Lin Guan and Karl Muller and Jake Whritner and Luxin Zhang and Mary Hayhoe and Dana Ballard},
-	title = {Atari-{HEAD}: Atari Human Eye-Tracking and Demonstration Dataset},
-	journal = {Proceedings of the {AAAI} Conference on Artificial Intelligence}
-}
-@article{10Hayhoe_2020,
-	doi = {10.1167/jov.20.2.8},
-	url = {https://doi.org/10.1167%2Fjov.20.2.8},
-	year = 2020,
-	month = {feb},
-	publisher = {Association for Research in Vision and Ophthalmology ({ARVO})},
-	volume = {20},
-	number = {2},
-	pages = {8},
-	author = {Mary Hayhoe and Katja Fiehler and Miriam Spering and Eli Brenner and Karl R. Gegenfurtner},
-	title = {Introduction to special issue on {\textquotedblleft}Prediction in Perception and Action{\textquotedblright}},
-	journal = {Journal of Vision}
+	volume = {50},
+	number = {3},
+	pages = {1207--1216},
+	author = {Falih Köksal and Gülsen Kumru and Can Anarat and Michael Domjan and Nur Yeni{\c{c}}eri},
+	title = {Compulsive Conditioned Sexual Responding of Male Japanese Quail in Extinction},
+	journal = {Archives of Sexual Behavior}
 }
