--- a/chaps.bib
+++ b/chaps.bib
@@ -1,17 +1,28 @@
-@incollection{Urcelay_2022,
-	doi = {10.1016/b978-0-12-809324-5.23952-7},
-	url = {https://doi.org/10.1016%2Fb978-0-12-809324-5.23952-7},
-	year = 2021,
-	publisher = {Elsevier},
-	pages = {109--117},
-	author = {Gonzalo P. Urcelay and Michael P. Domjan},
-	title = {Pavlovian Conditioning},
-	booktitle = {Encyclopedia of Behavioral Neuroscience, 2nd edition}
-}
 @InCollection{1,
-  title = {Pavlovian conditioning, survival, and reproductive success. },
-  author = {Michael Domjan},
-  booktitle = {Evolution of learning and memory mechanisms,},
+  title = {Schools as cultural reproduction devices. },
+  author = {Cristine Legare},
+  booktitle = {Oxford Handbook of Cultural Evolution},
+  year = {2023},
+  publisher = {.},
+}
+@InCollection{2,
+  title = {Explaining and solving practical problems supernaturally. },
+  author = {Cristine Legare},
+  booktitle = {Cognitive science of religion},
+  year = {2022},
+  publisher = {.},
+}
+@InCollection{3,
+  title = {Satisfying existential and epistemic needs: Representational pluralism among scientific domains. },
+  author = {Cristine Legare},
+  booktitle = {Representational pluralism: Perspectives from science education, psychology, philosophy, and the cognitive sciences. },
+  year = {2022},
+  publisher = {.},
+}
+@InCollection{4,
+  title = {Teaching controversial topics such as evolutionary theory: Tips and tools. },
+  author = {Cristine Legare},
+  booktitle = {Free speech and intellectual diversity in higher education. },
   year = {2022},
   publisher = {.},
 }
