--- a/preprints.bib
+++ b/preprints.bib
@@ -1,27 +1,9 @@
-@article{1Muller_2022,
-	doi = {10.1101/2022.09.06.506797},
-	url = {https://doi.org/10.1101%2F2022.09.06.506797},
-	year = 2022,
+@article{1Sobel_2020,
+	doi = {10.31234/osf.io/eydf5},
+	url = {https://doi.org/10.31234%2Fosf.io%2Feydf5},
+	year = 2020,
 	month = {sep},
-	publisher = {Cold Spring Harbor Laboratory},
-	author = {Karl Muller and Jonathan S. Matthis and Kathryn Bonnen and Lawrence K. Cormack and Alexander C. Huk and Mary Hayhoe},
-	title = {Behavior shapes retinal motion statistics during natural locomotion}
-}
-@article{2Liu_2020,
-	doi = {10.1101/2020.12.29.424756},
-	url = {https://doi.org/10.1101%2F2020.12.29.424756},
-	year = 2020,
-	month = {dec},
-	publisher = {Cold Spring Harbor Laboratory},
-	author = {Lijia Liu and Dana Ballard and Mary Hayhoe},
-	title = {Humans use minimum cost movements in a whole-body task}
-}
-@article{3Matthis_2020,
-	doi = {10.1101/2020.07.23.217893},
-	url = {https://doi.org/10.1101%2F2020.07.23.217893},
-	year = 2020,
-	month = {jul},
-	publisher = {Cold Spring Harbor Laboratory},
-	author = {Jonathan Samir Matthis and Karl S Muller and Kathryn Bonnen and Mary M Hayhoe},
-	title = {Retinal optic flow during natural locomotion}
+	publisher = {Center for Open Science},
+	author = {David Sobel and Susan Letourneau and Cristine Legare and Maureen Callanan},
+	title = {Relations between parent-child interaction and children's engagement and learning at a museum exhibit about circuits}
 }
