--- a/pubs.bib
+++ b/pubs.bib
@@ -1,27 +1,292 @@
-@article{1Monfils_2022,
-	doi = {10.1042/etls20220001},
-	url = {https://doi.org/10.1042%2Fetls20220001},
+@article{1Shavlik_2022,
+	doi = {10.1016/j.jecp.2022.105509},
+	url = {https://doi.org/10.1016%2Fj.jecp.2022.105509},
 	year = 2022,
-	month = {sep},
-	publisher = {Portland Press Ltd.},
-	volume = {6},
-	number = {5},
-	pages = {445--455},
-	author = {Marie-H. Monfils and Michael Domjan},
-	editor = {Amy L Milton},
-	title = {The elegant complexity of fear in non-human animals},
-	journal = {Emerging Topics in Life Sciences}
+	month = {dec},
+	publisher = {Elsevier {BV}},
+	volume = {224},
+	pages = {105509},
+	author = {Margaret Shavlik and Özgün Köksal and Brian F. French and Catherine A. Haden and Cristine H. Legare and Amy E. Booth},
+	title = {Contributions of causal reasoning to early scientific literacy},
+	journal = {Journal of Experimental Child Psychology}
 }
-@article{2K_ksal_2021,
-	doi = {10.1007/s10508-020-01906-5},
-	url = {https://doi.org/10.1007%2Fs10508-020-01906-5},
+@article{2Dutra_2022,
+	doi = {10.1111/desc.13228},
+	url = {https://doi.org/10.1111%2Fdesc.13228},
+	year = 2022,
+	month = {jan},
+	publisher = {Wiley},
+	volume = {25},
+	number = {5},
+	author = {Nat{\'{a}}lia B. Dutra and Lydia Chen and Adote Anum and Oskar Burger and Helen E. Davis and Vivian A. Dzokoto and Frankie T. K. Fong and Sabrina Ghelardi and Kimberly Mendez and Emily J. E. Messer and Morgan Newhouse and Mark G. Nielsen and Karlos Ramos and Bruce Rawlings and Renan A. C. dos Santos and Lara G. S. Silveira and Elliot M. Tucker-Drob and Cristine H. Legare},
+	title = {Examining relations between performance on non-verbal executive function and verbal self-regulation tasks in demographically-diverse populations},
+	journal = {Developmental Science}
+}
+@article{3Davis_2022,
+	doi = {10.1038/s41598-022-18231-7},
+	url = {https://doi.org/10.1038%2Fs41598-022-18231-7},
+	year = 2022,
+	month = {aug},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {12},
+	number = {1},
+	author = {Sarah Davis and Bruce Rawlings and Jennifer M. Clegg and Daniel Ikejimba and Rachel E. Watson-Jones and Andrew Whiten and Cristine H. Legare},
+	title = {Cognitive flexibility supports the development of cumulative cultural learning in children},
+	journal = {Scientific Reports}
+}
+@article{4Burger_2022,
+	doi = {10.1371/journal.pgph.0000756},
+	url = {https://doi.org/10.1371%2Fjournal.pgph.0000756},
+	year = 2022,
+	month = {aug},
+	publisher = {Public Library of Science ({PLoS})},
+	volume = {2},
+	number = {8},
+	pages = {e0000756},
+	author = {Oskar Burger and Faiz Hashmi and Maciej J. Da{\'{n}}ko and Santosh Akhauri and Indrajit Chaudhuri and Emily Little and Hannah G. Lunkenheimer and Sudipta Mondal and Nachiket Mor and Neela Saldanha and Janine Schooley and Palash Singh and Tracy Johnson and Cristine H. Legare},
+	editor = {Julia Robinson},
+	title = {Facilitating behavioral change: A comparative assessment of {ASHA} efficacy in rural Bihar},
+	journal = {{PLOS} Global Public Health}
+}
+@article{5Broesch_2022,
+	doi = {10.1016/j.infbeh.2022.101732},
+	url = {https://doi.org/10.1016%2Fj.infbeh.2022.101732},
+	year = 2022,
+	month = {aug},
+	publisher = {Elsevier {BV}},
+	volume = {68},
+	pages = {101732},
+	author = {Tanya Broesch and Emily E. Little and Leslie J. Carver and Cristine H. Legare},
+	title = {Still-face redux: Infant responses to a classic and modified still-face paradigm in proximal and distal care cultures},
+	journal = {Infant Behavior and Development}
+}
+@article{6Legare_2022,
+	doi = {10.1016/j.lansea.2022.04.002},
+	url = {https://doi.org/10.1016%2Fj.lansea.2022.04.002},
+	year = 2022,
+	month = {jun},
+	publisher = {Elsevier {BV}},
+	volume = {1},
+	pages = {100006},
+	author = {Cristine Legare and Oskar Burger and Tracy Johnson and Nachiket Mor and Neela Saldanha},
+	title = {Leverage the power of ritual to improve community health worker efficacy and public health outcomes: Lessons from Bihar, India},
+	journal = {The Lancet Regional Health - Southeast Asia}
+}
+@article{7Burger_2022,
+	doi = {10.1007/s13164-022-00635-z},
+	url = {https://doi.org/10.1007%2Fs13164-022-00635-z},
+	year = 2022,
+	month = {may},
+	publisher = {Springer Science and Business Media {LLC}},
+	author = {Oskar Burger and Lydia Chen and Alejandro Erut and Frankie T. K. Fong and Bruce Rawlings and Cristine H. Legare},
+	title = {Developing Cross-Cultural Data Infrastructures ({CCDIs}) for Research in Cognitive and Behavioral Sciences},
+	journal = {Review of Philosophy and Psychology}
+}
+@article{8Fong_2022,
+	doi = {10.1017/s0140525x22001200},
+	url = {https://doi.org/10.1017%2Fs0140525x22001200},
+	year = 2022,
+	publisher = {Cambridge University Press ({CUP})},
+	volume = {45},
+	author = {Frankie T. K. Fong and Mark Nielsen and Cristine H. Legare},
+	title = {Revisiting an extant framework: Concerns about culture and task generalization},
+	journal = {Behavioral and Brain Sciences}
+}
+@article{9Weisman_2021,
+	doi = {10.1038/s41562-021-01184-8},
+	url = {https://doi.org/10.1038%2Fs41562-021-01184-8},
+	year = 2021,
+	month = {aug},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {5},
+	number = {10},
+	pages = {1358--1368},
+	author = {Kara Weisman and Cristine H. Legare and Rachel E. Smith and Vivian A. Dzokoto and Felicity Aulino and Emily Ng and John C. Dulin and Nicole Ross-Zehnder and Joshua D. Brahinsky and Tanya Marie Luhrmann},
+	title = {Similarities and differences in concepts of mental life among adults and children in five cultures},
+	journal = {Nature Human Behaviour}
+}
+@article{10Luhrmann_2021,
+	doi = {10.1073/pnas.2109120118},
+	url = {https://doi.org/10.1073%2Fpnas.2109120118},
+	year = 2021,
+	month = {aug},
+	publisher = {Proceedings of the National Academy of Sciences},
+	volume = {118},
+	number = {32},
+	author = {Tanya Marie Luhrmann and Kara Weisman and Felicity Aulino and Joshua D. Brahinsky and John C. Dulin and Vivian A. Dzokoto and Cristine H. Legare and Michael Lifshitz and Emily Ng and Nicole Ross-Zehnder and Rachel E. Smith},
+	title = {Reply to Terhune and Jamieson: The nature of absorption},
+	journal = {Proceedings of the National Academy of Sciences}
+}
+@article{11Rawlings_2021,
+	doi = {10.1037/xan0000303},
+	url = {https://doi.org/10.1037%2Fxan0000303},
+	year = 2021,
+	month = {jul},
+	publisher = {American Psychological Association ({APA})},
+	volume = {47},
+	number = {3},
+	pages = {252--273},
+	author = {Bruce S. Rawlings and Cristine H. Legare and Sarah F. Brosnan and Gillian L. Vale},
+	title = {Leveling the playing field in studying cumulative cultural evolution: Conceptual and methodological advances in nonhuman animal research.},
+	journal = {Journal of Experimental Psychology: Animal Learning and Cognition}
+}
+@article{12Lunkenheimer_2021,
+	doi = {10.1136/bmjnph-2021-000252},
+	url = {https://doi.org/10.1136%2Fbmjnph-2021-000252},
+	year = 2021,
+	month = {jul},
+	publisher = {{BMJ}},
+	volume = {4},
+	number = {2},
+	pages = {385--396},
+	author = {Hannah G Lunkenheimer and Oskar Burger and Santosh Akhauri and Indrajit Chaudhuri and Lisa Dibbell and Faiz A Hashmi and Tracy Johnson and Emily E Little and Sudipta Mondal and Nachiket Mor and Neela Saldanha and Janine Schooley and Cristine H Legare},
+	title = {Tradition, taste and taboo: the gastroecology of maternal perinatal diet},
+	journal = {{BMJ} Nutrition, Prevention {\&} Health}
+}
+@article{13Little_2021,
+	doi = {10.1542/peds.2020-049717},
+	url = {https://doi.org/10.1542%2Fpeds.2020-049717},
+	year = 2021,
+	month = {jul},
+	publisher = {American Academy of Pediatrics ({AAP})},
+	volume = {148},
+	number = {1},
+	author = {Emily E. Little and Camille C. Cioffi and Lisa Bain and Cristine H. Legare and Jennifer Hahn-Holbrook},
+	title = {An Infant Carrier Intervention and Breastfeeding Duration: A Randomized Controlled Trial},
+	journal = {Pediatrics}
+}
+@article{14Luhrmann_2021,
+	doi = {10.1073/pnas.2016649118},
+	url = {https://doi.org/10.1073%2Fpnas.2016649118},
 	year = 2021,
 	month = {jan},
-	publisher = {Springer Science and Business Media {LLC}},
-	volume = {50},
+	publisher = {Proceedings of the National Academy of Sciences},
+	volume = {118},
+	number = {5},
+	author = {Tanya Marie Luhrmann and Kara Weisman and Felicity Aulino and Joshua D. Brahinsky and John C. Dulin and Vivian A. Dzokoto and Cristine H. Legare and Michael Lifshitz and Emily Ng and Nicole Ross-Zehnder and Rachel E. Smith},
+	title = {Sensing the presence of gods and spirits across cultures and faiths},
+	journal = {Proceedings of the National Academy of Sciences}
+}
+@article{15K_ksal_2021,
+	doi = {10.1016/j.jecp.2020.105080},
+	url = {https://doi.org/10.1016%2Fj.jecp.2020.105080},
+	year = 2021,
+	month = {may},
+	publisher = {Elsevier {BV}},
+	volume = {205},
+	pages = {105080},
+	author = {Özgün Köksal and Beate Sodian and Cristine H. Legare},
+	title = {Young children's metacognitive awareness of confounded evidence},
+	journal = {Journal of Experimental Child Psychology}
+}
+@article{16Sobel_2020,
+	doi = {10.1111/desc.13057},
+	url = {https://doi.org/10.1111%2Fdesc.13057},
+	year = 2020,
+	month = {nov},
+	publisher = {Wiley},
+	volume = {24},
 	number = {3},
-	pages = {1207--1216},
-	author = {Falih Köksal and Gülsen Kumru and Can Anarat and Michael Domjan and Nur Yeni{\c{c}}eri},
-	title = {Compulsive Conditioned Sexual Responding of Male Japanese Quail in Extinction},
-	journal = {Archives of Sexual Behavior}
+	author = {David M. Sobel and Susan M. Letourneau and Cristine H. Legare and Maureen Callanan},
+	title = {Relations between parent{\textendash}child interaction and children's engagement and learning at a museum exhibit about electric circuits},
+	journal = {Developmental Science}
+}
+@article{17Rawlings_2021,
+	doi = {10.1016/j.tics.2020.10.006},
+	url = {https://doi.org/10.1016%2Fj.tics.2020.10.006},
+	year = 2020,
+	month = {jan},
+	publisher = {Elsevier {BV}},
+	volume = {25},
+	number = {1},
+	pages = {81--92},
+	author = {Bruce Rawlings and Cristine H. Legare},
+	title = {Toddlers, Tools, and Tech: The Cognitive Ontogenesis of Innovation},
+	journal = {Trends in Cognitive Sciences}
+}
+@article{18Busch_2020,
+	doi = {10.1111/cogs.12909},
+	url = {https://doi.org/10.1111%2Fcogs.12909},
+	year = 2020,
+	month = {oct},
+	publisher = {Wiley},
+	volume = {44},
+	number = {10},
+	author = {Justin T. A. Busch and Rachel E. Watson-Jones and Cristine H. Legare},
+	title = {Cultural Variation in the Development of Beliefs About Conservation},
+	journal = {Cognitive Science}
+}
+@article{19Clegg_2020,
+	doi = {10.1111/cdev.13443},
+	url = {https://doi.org/10.1111%2Fcdev.13443},
+	year = 2020,
+	month = {aug},
+	publisher = {Wiley},
+	volume = {92},
+	number = {1},
+	author = {Jennifer M. Clegg and Nicole J. Wen and Paige H. DeBaylo and Adam Alcott and Elena C. Keltner and Cristine H. Legare},
+	title = {Teaching Through Collaboration: Flexibility and Diversity in Caregiver{\textendash}Child Interaction Across Cultures},
+	journal = {Child Development}
+}
+@article{20Rawlings_2020,
+	doi = {10.1017/s0140525x20000217},
+	url = {https://doi.org/10.1017%2Fs0140525x20000217},
+	year = 2020,
+	publisher = {Cambridge University Press ({CUP})},
+	volume = {43},
+	author = {Bruce Rawlings and Cristine H. Legare},
+	title = {The social side of innovation},
+	journal = {Behavioral and Brain Sciences}
+}
+@article{21Legare_2020,
+	doi = {10.1098/rstb.2019.0433},
+	url = {https://doi.org/10.1098%2Frstb.2019.0433},
+	year = 2020,
+	month = {jun},
+	publisher = {The Royal Society},
+	volume = {375},
+	number = {1805},
+	pages = {20190433},
+	author = {Cristine H. Legare and Santosh Akhauri and Indrajit Chaudhuri and Faiz A. Hashmi and Tracy Johnson and Emily E. Little and Hannah G. Lunkenheimer and Alexandra Mandelbaum and Harsh Mandlik and Sudipta Mondal and Nachiket Mor and Neela Saldanha and Janine Schooley and Priyam Sharda and Shalini Subbiah and Siddharta Swarup and Mari Tikkanen and Oskar Burger},
+	title = {Perinatal risk and the cultural ecology of health in Bihar, India},
+	journal = {Philosophical Transactions of the Royal Society B: Biological Sciences}
+}
+@article{22Legare_2020,
+	doi = {10.1098/rstb.2019.0419},
+	url = {https://doi.org/10.1098%2Frstb.2019.0419},
+	year = 2020,
+	month = {jun},
+	publisher = {The Royal Society},
+	volume = {375},
+	number = {1805},
+	pages = {20190419},
+	author = {Cristine H. Legare and Mark Nielsen},
+	title = {Ritual explained: interdisciplinary answers to Tinbergen{\textquotesingle}s four questions},
+	journal = {Philosophical Transactions of the Royal Society B: Biological Sciences}
+}
+@article{23Wen_2020,
+	doi = {10.1098/rstb.2019.0437},
+	url = {https://doi.org/10.1098%2Frstb.2019.0437},
+	year = 2020,
+	month = {jun},
+	publisher = {The Royal Society},
+	volume = {375},
+	number = {1805},
+	pages = {20190437},
+	author = {Nicole J. Wen and Aiyana K. Willard and Michaela Caughy and Cristine H. Legare},
+	title = {Watch me, watch you: ritual participation increases in-group displays and out-group monitoring in children},
+	journal = {Philosophical Transactions of the Royal Society B: Biological Sciences}
+}
+@article{24Callanan_2020,
+	doi = {10.1111/mono.12412},
+	url = {https://doi.org/10.1111%2Fmono.12412},
+	year = 2020,
+	month = {mar},
+	publisher = {Wiley},
+	volume = {85},
+	number = {1},
+	pages = {7--137},
+	author = {Maureen A. Callanan and Cristine H. Legare and David M. Sobel and Garrett J. Jaeger and Susan Letourneau and Sam R. McHugh and Aiyana Willard and Aurora Brinkman and Zoe Finiasz and Erika Rubio and Adrienne Barnett and Robin Gose and Jennifer L. Martin and Robin Meisner and Janella Watson},
+	title = {Exploration, Explanation, and Parent{\textendash}Child Interaction in Museums},
+	journal = {Monographs of the Society for Research in Child Development}
 }
