--- a/chaps.bib
+++ b/chaps.bib
@@ -1,28 +1,7 @@
 @InCollection{1,
-  title = {Schools as cultural reproduction devices. },
-  author = {Cristine Legare},
-  booktitle = {Oxford Handbook of Cultural Evolution},
-  year = {2023},
-  publisher = {.},
-}
-@InCollection{2,
-  title = {Explaining and solving practical problems supernaturally. },
-  author = {Cristine Legare},
-  booktitle = {Cognitive science of religion},
-  year = {2022},
-  publisher = {.},
-}
-@InCollection{3,
-  title = {Satisfying existential and epistemic needs: Representational pluralism among scientific domains. },
-  author = {Cristine Legare},
-  booktitle = {Representational pluralism: Perspectives from science education, psychology, philosophy, and the cognitive sciences. },
-  year = {2022},
-  publisher = {.},
-}
-@InCollection{4,
-  title = {Teaching controversial topics such as evolutionary theory: Tips and tools. },
-  author = {Cristine Legare},
-  booktitle = {Free speech and intellectual diversity in higher education. },
+  title = {Mobile Sensing in Developmental Science: A practical guide for researchers.},
+  author = {Kaya {de Barbaro}},
+  booktitle = {Mobile Sensing in Psychology: Methods and Applications},
   year = {2022},
   publisher = {.},
 }
