--- a/preprints.bib
+++ b/preprints.bib
@@ -1,9 +1,9 @@
-@article{1Sobel_2020,
-	doi = {10.31234/osf.io/eydf5},
-	url = {https://doi.org/10.31234%2Fosf.io%2Feydf5},
-	year = 2020,
+@article{1Schnyer_2022,
+	doi = {10.31219/osf.io/4jdy7},
+	url = {https://doi.org/10.31219%2Fosf.io%2F4jdy7},
+	year = 2022,
 	month = {sep},
 	publisher = {Center for Open Science},
-	author = {David Sobel and Susan Letourneau and Cristine Legare and Maureen Callanan},
-	title = {Relations between parent-child interaction and children's engagement and learning at a museum exhibit about circuits}
+	author = {David M Schnyer and Ian Dobbins},
+	title = {Priming, to appear in Oxford Handbook of Human Memory}
 }
