--- a/chaps.bib
+++ b/chaps.bib
@@ -1,7 +1,7 @@
 @InCollection{1,
-  title = {Mobile Sensing in Developmental Science: A practical guide for researchers.},
-  author = {Kaya {de Barbaro}},
-  booktitle = {Mobile Sensing in Psychology: Methods and Applications},
-  year = {2022},
+  title = {Mobile sensing in relationship research (in press)},
+  author = {Dr. Adela C. Timmons},
+  booktitle = {Mobile sensing in relationship research},
+  year = {2023},
   publisher = {.},
 }
