--- a/pubs.bib
+++ b/pubs.bib
@@ -1,4 +1,14 @@
-@article{1Timmons_2023,
+@article{1Zhao_2023,
+	doi = {10.1007/s10488-023-01259-w},
+	url = {https://doi.org/10.1007%2Fs10488-023-01259-w},
+	year = 2023,
+	month = {mar},
+	publisher = {Springer Science and Business Media {LLC}},
+	author = {Xin Zhao and Timothy Hayes and Adela C. Timmons and Wensong Wu and Stacy L. Frazier},
+	title = {Unpacking Inequities in {ADHD} Diagnosis: Examining Individual-Level Race/Ethnicity and State-Level Online Information-Seeking Patterns},
+	journal = {Administration and Policy in Mental Health and Mental Health Services Research}
+}
+@article{2Timmons_2023,
 	doi = {10.1037/emo0001201},
 	url = {https://doi.org/10.1037%2Femo0001201},
 	year = 2023,
@@ -8,7 +18,7 @@
 	title = {Relationship satisfaction, feelings of closeness and annoyance, and linkage in electrodermal activity.},
 	journal = {Emotion}
 }
-@article{2Timmons_2022,
+@article{3Timmons_2022,
 	doi = {10.1177/17456916221134490},
 	url = {https://doi.org/10.1177%2F17456916221134490},
 	year = 2022,
@@ -19,7 +29,7 @@
 	title = {A Call to Action on Assessing and Mitigating Bias in Artificial Intelligence Applications for Mental Health},
 	journal = {Perspectives on Psychological Science}
 }
-@article{3Ramos_2021,
+@article{4Ramos_2021,
 	doi = {10.1111/famp.12719},
 	url = {https://doi.org/10.1111%2Ffamp.12719},
 	year = 2022,
@@ -32,7 +42,7 @@
 	title = {Observed parent{\textendash}adolescent coalitions and family hostilities during family discussions: Associations with marital aggression},
 	journal = {Family Process}
 }
-@article{4Margolin_2022,
+@article{5Margolin_2022,
 	doi = {10.1037/fam0000979},
 	url = {https://doi.org/10.1037%2Ffam0000979},
 	year = 2022,
@@ -45,7 +55,7 @@
 	title = {What happens when romantic couples discuss personal loss? Relational, emotional, and physiological impacts.},
 	journal = {Journal of Family Psychology}
 }
-@article{5Zhao_2021,
+@article{6Zhao_2021,
 	doi = {10.1007/s10488-021-01168-w},
 	url = {https://doi.org/10.1007%2Fs10488-021-01168-w},
 	year = 2021,
@@ -58,7 +68,7 @@
 	title = {Mental Health Information Seeking Online: A Google Trends Analysis of {ADHD}},
 	journal = {Administration and Policy in Mental Health and Mental Health Services Research}
 }
-@article{6Han_2021,
+@article{7Han_2021,
 	doi = {10.1016/j.biopsycho.2021.108082},
 	url = {https://doi.org/10.1016%2Fj.biopsycho.2021.108082},
 	year = 2021,
@@ -70,7 +80,7 @@
 	title = {Romantic partner presence and physiological responses in daily life: Attachment style as a moderator},
 	journal = {Biological Psychology}
 }
-@article{7Han_2021,
+@article{8Han_2021,
 	doi = {10.1111/famp.12644},
 	url = {https://doi.org/10.1111%2Ffamp.12644},
 	year = 2021,
@@ -83,7 +93,7 @@
 	title = {A Systematic Review of Respiratory Sinus Arrhythmia in Romantic Relationships},
 	journal = {Family Process}
 }
-@article{8Timmons_2021,
+@article{9Timmons_2021,
 	doi = {10.1037/fam0000699},
 	url = {https://doi.org/10.1037%2Ffam0000699},
 	year = 2021,
@@ -96,7 +106,7 @@
 	title = {Fluctuations in pronoun use in everyday life: Understanding couple aggression in context.},
 	journal = {Journal of Family Psychology}
 }
-@article{9Carl_2021,
+@article{10Carl_2021,
 	doi = {10.1111/bjc.12286},
 	url = {https://doi.org/10.1111%2Fbjc.12286},
 	year = 2021,
@@ -109,7 +119,7 @@
 	title = {Regulating digital therapeutics for mental health: Opportunities, challenges, and the essential role of psychologists},
 	journal = {British Journal of Clinical Psychology}
 }
-@article{10Han_2020,
+@article{11Han_2020,
 	doi = {10.1177/1948550620958806},
 	url = {https://doi.org/10.1177%2F1948550620958806},
 	year = 2021,
@@ -120,7 +130,7 @@
 	title = {Feelings of Annoyance and Spoken Anger Words in Couples' Everyday Lives: The Role of Family-of-Origin Aggression},
 	journal = {Social Psychological and Personality Science}
 }
-@article{11Schacter_2020,
+@article{12Schacter_2020,
 	doi = {10.1093/abm/kaaa019},
 	url = {https://doi.org/10.1093%2Fabm%2Fkaaa019},
 	year = 2020,
@@ -133,7 +143,7 @@
 	title = {A Matter of the Heart: Daytime Relationship Functioning and Overnight Heart Rate in Young Dating Couples},
 	journal = {Annals of Behavioral Medicine}
 }
-@article{12Gupta_2020,
+@article{13Gupta_2020,
 	doi = {10.1145/3372045},
 	url = {https://doi.org/10.1145%2F3372045},
 	year = 2020,
